--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "@tobyg74/tiktok-api-dl": "^1.3.7",
+    "@xct007/frieren-scraper": "^0.0.2",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "rahad-all-downloader": "^2.1.18",
-    "rahad-all-downloader-v2": "^2.0.3"
+    "rahad-all-downloader-v2": "^2.0.3",
+    "shaon-videos-downloader": "^1.0.1",
+    "snapsave-media-downloader": "^2.4.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
