--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "dependencies": {
     "@tobyg74/tiktok-api-dl": "^1.3.7",
     "@xct007/frieren-scraper": "^0.0.2",
+    "@zulproject/ytdl": "^1.5.1",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "rahad-all-downloader": "^2.1.18",
     "rahad-all-downloader-v2": "^2.0.3",
-    "shaon-videos-downloader": "^1.0.1",
-    "snapsave-media-downloader": "^2.4.0"
+    "rahad-media-downloader": "^2.1.14",
+    "shaon-videos-downloader": "^1.0.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
