--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,20 @@
 {
-"compilerOptions": {
+  "compilerOptions": {
     "outDir": "./dist",
     "rootDir": "./",
     "target": "ES2022",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+
+    "module": "CommonJS",
+    "moduleResolution": "Node",
+
     "strict": true,
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
+
     "typeRoots": ["./types", "./node_modules/@types"]
-  }
+  },
+  "include": ["**/*.ts"]
 }
