--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tobyg74/tiktok-api-dl": "^1.3.7",
     "@xct007/frieren-scraper": "^0.0.2",
     "@zulproject/ytdl": "^1.5.1",
+    "ab-downloader": "^1.0.2",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "rahad-all-downloader": "^2.1.18",
